# subplots-from-axsize

./: .gitignore  LICENSE  README.md  pyproject.toml
src/subplots_from_axsize/: __init__.py  _subplots_from_axsize.py
tests/: test_subplots_from_axsize.py
