[tool.poetry]
name = "subplots-from-axsize"
version = "0.1.4"
description = ""
authors = ["Frederic Grabowski <grabowski.frederic@gmail.com>"]
readme = "README.md"
packages = [{include = "subplots_from_axsize", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5"
pytest = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
