[tool.poetry]
name = "subplots-from-axsize"
version = "0.1.7"
description = ""
authors = ["Frederic Grabowski <grabowski.frederic@gmail.com>"]
readme = "README.md"
packages = [{include = "subplots_from_axsize", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
